<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp10"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editText_plate_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:ems="10"
        android:hint="@string/plate_number"
        android:inputType="text"
        android:textColor="@color/colorText" />

    <EditText
        android:id="@+id/editText_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColor="@color/colorText" />

    <EditText
        android:id="@+id/editText_car_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:ems="10"
        android:hint="@string/car_type"
        android:inputType="textPersonName"
        android:textColor="@color/colorText" />

    <EditText
        android:id="@+id/editText_itp_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:ems="10"
        android:hint="@string/itp_duration"
        android:inputType="number"
        android:textColor="@color/colorText" />

    <TextView
        android:id="@+id/textView_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:layout_marginStart="@dimen/dp30"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp30"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/click_for_date"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/sp20" />

</LinearLayout>