<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_profile_photo_gradient"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintBottom_toTopOf="@+id/editText_login_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/car" />

    <EditText
        android:id="@+id/editText_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp20"
        android:layout_marginBottom="@dimen/dp20"
        android:background="@drawable/my_rounded_edit_text"
        android:drawableStart="@drawable/user"
        android:drawableTint="@color/colorText"
        android:ems="10"
        android:hint="@string/login_editText_email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/dp10"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toTopOf="@+id/login_inner_linear_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <LinearLayout
        android:id="@+id/login_inner_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp20"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toTopOf="@id/button_login_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <CheckBox
            android:id="@+id/checkbox_login_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp10"
            android:text="@string/login_checkBox_remember_me"
            android:textColor="@color/colorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/checkbox_login_auto_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_checkBox_auto_login"
            android:textColor="@color/colorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_login_remember_me" />

    </LinearLayout>

    <Button
        android:id="@+id/button_login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginTop="@dimen/dp30"
        android:layout_marginEnd="@dimen/dp20"
        android:layout_marginBottom="@dimen/dp20"
        android:background="@drawable/button_click_normal"
        android:onClick="login"
        android:text="@string/login_button_login"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>