<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dp20"
    android:layout_marginTop="@dimen/dp20"
    android:layout_marginEnd="@dimen/dp20"
    android:background="@drawable/my_rounded_list_element"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    android:padding="@dimen/dp15">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp15"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/plate_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp10"
                    android:layout_marginTop="@dimen/dp5"
                    android:layout_marginEnd="@dimen/dp5"
                    android:layout_marginBottom="@dimen/dp5"
                    android:drawableTint="@color/colorText"
                    android:text="@string/plate_number"
                    android:textColor="@color/colorOnDarkerBackground"
                    android:textSize="@dimen/sp20" />

                <TextView
                    android:id="@+id/plate_number_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp10"
                    android:layout_marginTop="@dimen/dp5"
                    android:layout_marginEnd="@dimen/dp5"
                    android:layout_marginBottom="@dimen/dp5"
                    android:textColor="@color/colorOnDarkerBackground"
                    android:textSize="@dimen/sp20" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/itp_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp10"
                    android:layout_marginTop="@dimen/dp5"
                    android:layout_marginEnd="@dimen/dp5"
                    android:layout_marginBottom="@dimen/dp5"
                    android:drawableTint="@color/colorText"
                    android:text="@string/itp_duration"
                    android:textColor="@color/colorOnDarkerBackground"
                    android:textSize="@dimen/sp20" />

                <TextView
                    android:id="@+id/itp_duration_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp10"
                    android:layout_marginTop="@dimen/dp5"
                    android:layout_marginEnd="@dimen/dp5"
                    android:layout_marginBottom="@dimen/dp5"
                    android:textColor="@color/colorOnDarkerBackground"
                    android:textSize="@dimen/sp20" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/car_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp10"
                    android:layout_marginTop="@dimen/dp5"
                    android:layout_marginEnd="@dimen/dp5"
                    android:layout_marginBottom="@dimen/dp5"
                    android:drawableTint="@color/colorText"
                    android:text="@string/car_type"
                    android:textColor="@color/colorOnDarkerBackground"
                    android:textSize="@dimen/sp20" />

                <TextView
                    android:id="@+id/car_type_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp10"
                    android:layout_marginTop="@dimen/dp5"
                    android:layout_marginEnd="@dimen/dp5"
                    android:layout_marginBottom="@dimen/dp5"
                    android:textColor="@color/colorOnDarkerBackground"
                    android:textSize="@dimen/sp20" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp10"
                    android:layout_marginTop="@dimen/dp5"
                    android:layout_marginEnd="@dimen/dp5"
                    android:layout_marginBottom="@dimen/dp5"
                    android:drawableTint="@color/colorText"
                    android:text="@string/phone_number"
                    android:textColor="@color/colorOnDarkerBackground"
                    android:textSize="@dimen/sp20" />

                <TextView
                    android:id="@+id/phone_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp10"
                    android:layout_marginTop="@dimen/dp5"
                    android:layout_marginEnd="@dimen/dp5"
                    android:layout_marginBottom="@dimen/dp5"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:textColor="@color/colorButton"
                    android:textSize="@dimen/sp20" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp10"
                    android:layout_marginTop="@dimen/dp5"
                    android:layout_marginEnd="@dimen/dp5"
                    android:layout_marginBottom="@dimen/dp5"
                    android:drawableTint="@color/colorText"
                    android:text="@string/date_added"
                    android:textColor="@color/colorOnDarkerBackground"
                    android:textSize="@dimen/sp20" />

                <TextView
                    android:id="@+id/done_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp10"
                    android:layout_marginTop="@dimen/dp5"
                    android:layout_marginEnd="@dimen/dp5"
                    android:layout_marginBottom="@dimen/dp5"
                    android:textColor="@color/colorOnDarkerBackground"
                    android:textSize="@dimen/sp20" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/expire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp10"
                    android:layout_marginTop="@dimen/dp5"
                    android:layout_marginEnd="@dimen/dp5"
                    android:layout_marginBottom="@dimen/dp5"
                    android:drawableTint="@color/colorText"
                    android:text="@string/expire_date"
                    android:textColor="@color/colorOnDarkerBackground"
                    android:textSize="@dimen/sp20" />

                <TextView
                    android:id="@+id/expire_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp10"
                    android:layout_marginTop="@dimen/dp5"
                    android:layout_marginEnd="@dimen/dp5"
                    android:layout_marginBottom="@dimen/dp5"
                    android:textColor="@color/colorOnDarkerBackground"
                    android:textSize="@dimen/sp20" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>